# coreutils-rs

./: .gitignore  README.md
cat_rs/: Cargo.toml
cat_rs/src/: lib.rs  main.rs
cat_rs/tests/: cli.rs
cut_rs/: Cargo.toml  mk-out.sh
cut_rs/src/: lib.rs  main.rs
cut_rs/tests/: cli.rs
echo-rs/: Cargo.toml
echo-rs/src/: main.rs
echo-rs/tests/: cli.rs
find_rs/: Cargo.toml
find_rs/src/: lib.rs  lib_old.rs  main.rs
find_rs/tests/: cli.rs
grep_rs/: Cargo.toml
grep_rs/src/: lib.rs  main.rs
grep_rs/tests/: cli.rs
head_rs/: Cargo.toml
head_rs/src/: lib.rs  main.rs
head_rs/tests/: cli.rs
uniq_rs/: Cargo.toml
uniq_rs/src/: lib.rs  main.rs
uniq_rs/tests/: cli.rs
wc_rs/: Cargo.toml
wc_rs/src/: lib.rs  main.rs
wc_rs/tests/: cli.rs
