[package]
name = "cut_rs"
version = "0.1.0"
edition = "2021"
authors = ["moz-sec <m0253c@gmail.com>"]

license = "MIT"
description = "cut_rs: cut out selected portions in Rust"
repository = "https://github.com/moz-sec/coreutils-rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.5"

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
rand = "0.8.5"
